# flask-form

./: README.md  app.py  pyproject.toml
instance/: data.db
templates/: index.html
