[tool.poetry]
name = "flask-form"
version = "0.1.0"
description = ""
authors = ["Łukasz Kuk <lukasz010420@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_form"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask_sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
